Fix Bug 1463453 - The onboarding sections are misaligned between themselves when displayed vertically (#4174)

--- a/system-addon/content-src/asrouter/templates/OnboardingMessage/_OnboardingMessage.scss
+++ b/system-addon/content-src/asrouter/templates/OnboardingMessage/_OnboardingMessage.scss
@@ -63,7 +63,7 @@
 
     @media(max-width: 850px) {
       height: 75px;
-      width: 160px;
+      min-width: 80px;
       background-size: 80px;
     }
 
